Refactore to include problem details example
