# consumerService/internal/app/api/processed/handler.go
@@ -1,11 +1,14 @@
 package processed
 
 import (
+	"errors"
 	"net/http"
 	"strconv"
 
+	"github.com/go-playground/validator/v10"
 	"github.com/google/uuid"
 	"github.com/samuel-poirier/go-pubsub-demo/consumer/internal/app/service"
+	"github.com/samuel-poirier/go-pubsub-demo/consumer/internal/app/service/queries"
 	_ "github.com/samuel-poirier/go-pubsub-demo/consumer/internal/repository"
 	"github.com/samuel-poirier/go-pubsub-demo/shared/response"
 )
@@ -26,6 +29,8 @@ func NewHandler(service *service.Service) Handler {
 // @Param limit query int false "Number of items to return" default(100)
 // @Param offset query int false "Number of items to skip" default(0)
 // @Success		200	{array} repository.ProcessedItem
+// @Success		400	{object} response.ErrorModel
+// @Success		500	{object} response.ErrorModel
 // @Router			/api/v1/items/processed [get]
 func (handler *Handler) ProcessedItems(w http.ResponseWriter, r *http.Request) {
 
@@ -53,22 +58,34 @@ func (handler *Handler) ProcessedItems(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	items, err := handler.service.Queries.FindProcessedItemsWithPaging(r.Context(), int32(offset), int32(limit))
+	items, err := handler.service.Queries.FindProcessedItemsWithPaging(r.Context(), queries.FindProcessedItemsWithPagingQuery{
+		Offset: int32(offset),
+		Limit:  int32(limit),
+	})
+
+	var validateErrs validator.ValidationErrors
+
+	if errors.As(err, &validateErrs) {
+		response.WriteJsonBadRequest(w, validateErrs.Error())
+		return
+	}
 
 	if err != nil {
 		response.WriteInternalServerError(w, err.Error())
-	} else {
-		response.WriteJsonOk(w, items)
+		return
 	}
+
+	response.WriteJsonOk(w, items)
 }
 
 // @Summary		Endpoint to count processed items
 // @Description	Returns count of all processed items
 // @Produce		json
 // @Success		200	{number} count
+// @Success		500	{object} response.ErrorModel
 // @Router			/api/v1/items/processed/count [get]
 func (handler *Handler) CountProcessedItems(w http.ResponseWriter, r *http.Request) {
-	count, err := handler.service.Queries.CountAllProcessedItems(r.Context())
+	count, err := handler.service.Queries.CountAllProcessedItems(r.Context(), queries.CountAllProcessedItemsQuery{})
 	if err != nil {
 		response.WriteInternalServerError(w, err.Error())
 	} else {
@@ -80,7 +97,9 @@ func (handler *Handler) CountProcessedItems(w http.ResponseWriter, r *http.Reque
 // @Description	Returns the processed item found by id
 // @Produce		json
 // @Success		200	{object} repository.ProcessedItem
-// @Error		404	not found
+// @Success		400	{object} response.ErrorModel
+// @Success		404	{object} response.ErrorModel
+// @Success		500	{object} response.ErrorModel
 // @Router			/api/v1/items/processed/{id} [get]
 // @Param id path string true "id of the item"
 func (handler *Handler) FindProcessedItemById(w http.ResponseWriter, r *http.Request) {
@@ -92,7 +111,9 @@ func (handler *Handler) FindProcessedItemById(w http.ResponseWriter, r *http.Req
 		return
 	}
 
-	item, err := handler.service.Queries.FindProcessedItemById(r.Context(), id)
+	item, err := handler.service.Queries.FindProcessedItemById(r.Context(), queries.FindProcessedItemByIdQuery{
+		Id: id,
+	})
 	if err != nil {
 		response.WriteInternalServerError(w, err.Error())
 		return
